vlib/v/checker/tests/orm_bulk_insert_pointer_array_error.vv
import db.sqlite

struct BulkPointerUser {
	id   int @[primary]
	name string
}

fn main() {
	mut db := sqlite.connect(':memory:') or { panic(err) }
	user := BulkPointerUser{
		id:   1
		name: 'Alice'
	}
	users := [&user]
	sql db {
		insert users into BulkPointerUser
	}!
}
